--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'pricing' %}">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a></li>
                     </ul>
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item dropdown">
@@ -90,108 +90,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://js.stripe.com/v3/"></script>
-
-    <script>
-        AOS.init();
-    </script>
-    {% block postloadjs %}{% endblock %}
-</body>
-</html>
-
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FitConnect {% block extra_title %}{% endblock %}</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <!-- AOS CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-    {% block extra_css %}{% endblock %}
-</head>
-<body>
-    <header>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm py-3">
-            <div class="container" style="max-width: 90%;">
-                <a class="navbar-brand font-weight-bold" href="{% url 'home' %}">FitConnect</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-                    aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="mainNav">
-                    <ul class="navbar-nav ms-5">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'program_list' %}">Programs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'pricing' %}">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
-                    </ul>
-                    <ul class="navbar-nav ms-5">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-user"></i> My Account
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
-                                {% if request.user.is_authenticated %}
-                                    <li><a class="dropdown-item" href="{% url 'account_profile' %}">My Profile</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
-                                {% else %}
-                                    <li><a class="dropdown-item" href="{% url 'account_signup' %}">Register</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'account_login' %}">Login</a></li>
-                                {% endif %}
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main style="max-width: 90%; margin: 0 auto;" class="my-5">
-        {% block content %}{% endblock %}
-    </main>
-
-    <footer class="bg-light text-center text-lg-left pt-4 mt-auto border-top">
-        <div class="container" style="max-width: 90%;">
-            <div class="row">
-                <div class="col-md-6 mb-3">
-                    <h5>Contact Us</h5>
-                    <p>Email: support@fitconnect.com</p>
-                    <p>Phone: +123 456 7890</p>
-                </div>
-                <div class="col-md-6 mb-3 text-md-right">
-                    <h5>Follow Us</h5>
-                    <a href="https://www.facebook.com/profile.php?id=61575883718653" target="_blank" class="text-decoration-none">
-                        <i class="fab fa-facebook fa-lg"></i> Facebook
-                    </a>
-                </div>
-            </div>
-            <div class="text-center py-3">
-                &copy; 2025 FitConnect. All rights reserved.
-            </div>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://js.stripe.com/v3/"></script>
 
     <script>
         AOS.init();
