--- a/templates/subscription/success.html
+++ b/templates/subscription/success.html
@@ -8,7 +8,7 @@
                     <h3 class="card-title text-center">Subscription Successful!</h3>
                     <p class="card-text text-center">Thank you for subscribing to FitConnect. Your subscription has been activated successfully!</p>
                     <div class="text-center">
-                        <a href="/" class="btn btn-primary btn-lg">Go to Dashboard</a>
+                        <a href="{% url 'dashboard' %}" class="btn btn-primary btn-lg">Go to Dashboard</a>
                     </div>
                 </div>
             </div>
