--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,9 +18,12 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <!-- flatpickr -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
     {% block extra_css %}{% endblock %}
 </head>
+
 <body>
     <header>
         <!-- Navbar -->
@@ -35,23 +39,25 @@
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'program_list' %}">Programs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'pricing' %}">Subscribe</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a></li>
                     </ul>
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="userMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="userMenu" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-user"></i> My Account
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
                                 {% if request.user.is_authenticated %}
-                                    <li><a class="dropdown-item" href="{% url 'account_profile' %}">My Profile</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_profile' %}">My Profile</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li>
                                 {% else %}
-                                    <li><a class="dropdown-item" href="{% url 'account_signup' %}">Register</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'account_login' %}">Login</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_signup' %}">Register</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_login' %}">Login</a></li>
                                 {% endif %}
                             </ul>
                         </li>
@@ -75,7 +81,8 @@
                 </div>
                 <div class="col-md-6 mb-3 text-md-right">
                     <h5>Follow Us</h5>
-                    <a href="https://www.facebook.com/profile.php?id=61575883718653" target="_blank" class="text-decoration-none">
+                    <a href="https://www.facebook.com/profile.php?id=61575883718653" target="_blank"
+                        class="text-decoration-none">
                         <i class="fab fa-facebook fa-lg"></i> Facebook
                     </a>
                 </div>
@@ -88,12 +95,36 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <script>
         AOS.init();
     </script>
     {% block postloadjs %}{% endblock %}
+    {% if messages %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            {% for message in messages %}
+            const toastEl = document.createElement('div');
+            toastEl.className = 'toast align-items-center text-bg-success border-0 position-fixed bottom-0 end-0 m-3';
+            toastEl.role = 'alert';
+            toastEl.innerHTML = `
+        <div class="d-flex">
+          <div class="toast-body">
+            {{ message }}
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+        </div>
+      `;
+            document.body.appendChild(toastEl);
+            const toast = new bootstrap.Toast(toastEl, { delay: 3000 });
+            toast.show();
+            {% endfor %}
+        });
+    </script>
+    {% endif %}
 </body>
+
 </html>
