--- a/templates/programs/confirm_booking.html
+++ b/templates/programs/confirm_booking.html
@@ -40,8 +40,11 @@
 
           <div id="card-element"></div>
           <div id="card-errors" role="alert"></div>
-          <button id="submit-button" class="btn btn-outline-secondary btn-lg">Pay</button>
-          <a href="{% url 'program_detail' program.id %}" class="btn btn-outline-secondary btn-lg">❌ Cancel</a>
+          <form method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-success btn-lg">Pay Now</button>
+            <a href="{% url 'program_detail' program.id %}" class="btn btn-outline-secondary btn-lg">❌ Cancel</a>
+          </form>
 
         </form>
 
